use icons and spinner animation

--- a/alfmock.css
+++ b/alfmock.css
@@ -5,3 +5,16 @@
     display: flex;
     align-items: center;
 }
+
+@keyframes spinner {
+    to {transform: rotate(360deg);}
+}
+
+@-webkit-keyframes spinner {
+    to {-webkit-transform: rotate(360deg);}
+}
+
+.spinner {
+    animation: spinner .8s linear infinite;
+    -webkit-animation: spinner .8s linear infinite;
+}
