slow down the spinner a bit

--- a/alfmock.css
+++ b/alfmock.css
@@ -15,6 +15,6 @@
 }
 
 .spinner {
-    animation: spinner .8s linear infinite;
-    -webkit-animation: spinner .8s linear infinite;
+    animation: spinner 1.2s linear infinite;
+    -webkit-animation: spinner 1.2s linear infinite;
 }
